<resources>
    <string name="app_name">Контроль транспорта</string>
    <string name="motorcade">Автоколонна</string>
    <string name="vehicleType">Тип ТС</string>
    <string name="brand">Марка</string>
    <string name="plateNumber">Гос. Номер</string>
    <string name="inventoryNumber">Инвентарный №</string>
    <string name="garageNumber">Гаражный номер</string>
    <string name="drivers">Закрепленные водители</string>
    <string name="technicalInspection">Тех. Осмотр</string>
    <string name="insurance">Страховка</string>
    <string name="firstAidKit">Аптечка</string>
    <string name="extinguisher">Огнетушитель</string>
    <string name="previousTechnicalInspection">Дата проведения Предыдущего ТО</string>
    <string name="comments">Замечания</string>
    <string name="coolantDensity">Плотность ОЖ</string>
    <string name="electricalEquipmentState">Состояние электрооборудования</string>
    <string name="sufficientPressureInTheFireExtinguisher">Достаточное давление в огнетушителе</string>
    <string name="electrolyteDensity">Плотность электролита</string>
    <string name="eliminationDate">Дата устранения</string>
    <string name="wheelNumbers">Номера колес</string>
    <string name="add">Добавить</string>
    <string name="scan">scan</string>
    <string name="addPhoto">Добавить фото</string>
    <string name="name">Имя</string>
    <string name="etLastName">Фамилия</string>
    <string name="etMiddleName">Отчество</string>
    <string name="phone">Телефон</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="unconfirmed_account">Ваш аккаунт ещё не подтверждён</string>
    <string name="offer">Введите предложение…</string>
    <string name="addedBy">%s добавил %s %s</string>
    <string name="deletedBy">%s удалил %s %s</string>
    <string name="changedBy">%s изменил %s в %s %s</string>
    <string name="user_name_and_last_name">%s %s</string>
</resources>
