<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOrChangeActivityModer0">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/motorcade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_gravity="center_horizontal"
                android:hint="@string/motorcade"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                android:layout_gravity="center_horizontal"
                android:hint="@string/brand"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/vehicleType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                android:layout_gravity="center_horizontal"
                android:hint="@string/model"
                android:layout_marginBottom="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/plateNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName|textCapCharacters"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/plateNumber"
                    android:layout_marginBottom="10dp"/>
                <Button
                    android:id="@+id/scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/plateNumber"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/scan"
                    android:onClick="onClick"/>
            </RelativeLayout>
            <EditText
                android:id="@+id/inventoryNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_gravity="center_horizontal"
                android:hint="@string/inventoryNumber"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/garageNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_gravity="center_horizontal"
                android:hint="@string/garageNumber"
                android:layout_marginBottom="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/drivers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName|textCapSentences"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/drivers"
                    android:layout_centerInParent="true" />

                <Button
                    android:id="@+id/addDriver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/drivers"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="10dp"
                    android:text="+"
                    android:onClick="onClick"/>
            </RelativeLayout>
            <EditText
                android:id="@+id/technicalInspection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:layout_gravity="center_horizontal"
                android:hint="@string/technicalInspection"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/insurance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:layout_gravity="center_horizontal"
                android:hint="@string/insurance"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/firstAidKit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:layout_gravity="center_horizontal"
                android:hint="@string/firstAidKit"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/extinguisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:layout_gravity="center_horizontal"
                android:hint="@string/extinguisher"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/previousTechnicalInspection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:layout_gravity="center_horizontal"
                android:hint="@string/previousTechnicalInspection"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/comments"
                android:layout_width="match_parent"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:layout_height="150dp"
                android:gravity="top"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences|textMultiLine"
                android:background="@drawable/selector_lines_edit_view_bg"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/comments" />
            <EditText
                android:id="@+id/coolantDensity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_gravity="center_horizontal"
                android:hint="@string/coolantDensity"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/electricalEquipmentState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                android:layout_gravity="center_horizontal"
                android:hint="@string/electricalEquipmentState"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/sufficientPressureInTheFireExtinguisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                android:layout_gravity="center_horizontal"
                android:hint="@string/sufficientPressureInTheFireExtinguisher"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/electrolyteDensity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_gravity="center_horizontal"
                android:hint="@string/electrolyteDensity"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/addPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addPhoto"
                android:onClick="onClick"/>

            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btnAddOrChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add"
                android:onClick="onClick"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>