<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddingActivityModer12">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/motorcade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_gravity="center_horizontal"
                android:hint="@string/motorcade"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/vehicleType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_gravity="center_horizontal"
                android:hint="@string/vehicleType"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_gravity="center_horizontal"
                android:hint="@string/brand"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/plateNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_gravity="center_horizontal"
                android:hint="@string/plateNumber"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/inventoryNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_gravity="center_horizontal"
                android:hint="@string/inventoryNumber"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/garageNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_gravity="center_horizontal"
                android:hint="@string/garageNumber"
                android:layout_marginBottom="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/drivers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/drivers"
                    android:layout_centerInParent="true" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/drivers"
                    android:layout_marginRight="30dp"
                    android:text="+" />
            </RelativeLayout>
            <EditText
                android:id="@+id/technicalInspection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_gravity="center_horizontal"
                android:hint="@string/technicalInspection"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/insurance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_gravity="center_horizontal"
                android:hint="@string/insurance"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/firstAidKit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_gravity="center_horizontal"
                android:hint="@string/firstAidKit"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/extinguisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_gravity="center_horizontal"
                android:hint="@string/extinguisher"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/previousTechnicalInspection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_gravity="center_horizontal"
                android:hint="@string/previousTechnicalInspection"
                android:layout_marginBottom="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/wheelNumbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/wheelNumbers"
                    android:layout_centerInParent="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/wheelNumbers"
                    android:layout_marginRight="30dp"
                    android:text="+" />
            </RelativeLayout>
            <EditText
                android:id="@+id/eliminationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:layout_gravity="center_horizontal"
                android:hint="@string/eliminationDate"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>