<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName|textCapSentences"
        android:layout_marginTop="3dp"
        android:hint="@string/etLastName"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName|textCapSentences"
        android:layout_marginTop="3dp"
        android:hint="@string/name"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/etMiddleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName|textCapSentences"
        android:layout_marginTop="3dp"
        android:hint="@string/etMiddleName"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:layout_marginTop="3dp"
        android:hint="@string/phone"
        android:layout_marginBottom="10dp"/>
</LinearLayout>